--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,9 +20,11 @@ Encoding: UTF-8
 LazyData: true
 ByteCompile: true
 RoxygenNote: 6.0.1.9000
-Imports: 
+Imports:
     gh,
     httr,
     jsonlite
-Suggests: 
-    readr
+Suggests:
+    readr,
+    covr,
+    testthat
