--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,11 @@
 export(gh_new_release)
 export(pb_download)
 export(pb_upload)
+importFrom(fs,dir_ls)
 importFrom(gh,gh)
+importFrom(git2r,discover_repository)
+importFrom(git2r,remote_url)
+importFrom(git2r,repository)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
