first implementation of push/pull
Not exported.
Needs documentation and testing still

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,3 +17,5 @@ importFrom(httr,stop_for_status)
 importFrom(httr,upload_file)
 importFrom(httr,write_disk)
 importFrom(jsonlite,toJSON)
+importFrom(jsonlite,write_json)
+importFrom(usethis,use_git_ignore)
