documentation for push/pull

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 export(gh_new_release)
 export(pb_download)
+export(pb_pull)
+export(pb_push)
+export(pb_track)
 export(pb_upload)
 importFrom(fs,dir_ls)
 importFrom(gh,gh)
@@ -18,4 +21,5 @@ importFrom(httr,upload_file)
 importFrom(httr,write_disk)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
+importFrom(usethis,proj_get)
 importFrom(usethis,use_git_ignore)
