create path if doesn't exist message if pb_pull already sync'd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(pb_pull)
 export(pb_push)
 export(pb_track)
 export(pb_upload)
+importFrom(fs,dir_create)
 importFrom(fs,dir_ls)
 importFrom(gh,gh)
 importFrom(git2r,discover_repository)
