--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,12 @@ export(pb_pull)
 export(pb_push)
 export(pb_track)
 export(pb_upload)
+importFrom(clisymbols,symbol)
+importFrom(crayon,blue)
+importFrom(crayon,green)
 importFrom(fs,dir_create)
 importFrom(fs,dir_ls)
+importFrom(fs,path_join)
 importFrom(gh,gh)
 importFrom(git2r,discover_repository)
 importFrom(git2r,remote_url)
@@ -22,5 +26,6 @@ importFrom(httr,upload_file)
 importFrom(httr,write_disk)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
+importFrom(readr,write_lines)
 importFrom(usethis,proj_get)
 importFrom(usethis,use_git_ignore)
