improve testing of errors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Imports:
     usethis,
     crayon,
     clisymbols,
-    magrittr
+    magrittr,
+    lubridate
 Suggests:
     spelling,
     readr,
