--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports:
     crayon,
     clisymbols,
     magrittr,
-    lubridate
+    lubridate,
+    memoise
 Suggests:
     spelling,
     readr,
