--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,12 @@ export(pb_download)
 export(pb_download_url)
 export(pb_list)
 export(pb_new_release)
-export(pb_pull)
-export(pb_push)
 export(pb_track)
 export(pb_upload)
 importFrom(clisymbols,symbol)
 importFrom(crayon,blue)
 importFrom(crayon,green)
 importFrom(fs,dir_create)
-importFrom(fs,dir_ls)
 importFrom(fs,path_filter)
 importFrom(fs,path_join)
 importFrom(fs,path_rel)
@@ -30,7 +27,8 @@ importFrom(httr,stop_for_status)
 importFrom(httr,upload_file)
 importFrom(httr,write_disk)
 importFrom(jsonlite,toJSON)
-importFrom(jsonlite,write_json)
 importFrom(magrittr,"%>%")
+importFrom(memoise,memoise)
+importFrom(memoise,timeout)
 importFrom(usethis,proj_get)
 importFrom(usethis,use_git_ignore)
