--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(httr,upload_file)
 importFrom(httr,write_disk)
 importFrom(jsonlite,toJSON)
 importFrom(magrittr,"%>%")
+importFrom(memoise,forget)
 importFrom(memoise,memoise)
 importFrom(memoise,timeout)
 importFrom(usethis,proj_get)
