--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,10 @@ Authors@R: c(person("Carl", "Boettiger",
                     comment = c(ORCID = "0000-0002-1642-628X")),
              person("Mark", "Padgham", 
                      role = c("ctb"),
-                     comment = c(ORCID = "0000-0003-2172-5265")))
+                     comment = c(ORCID = "0000-0003-2172-5265")),
+             person(c('Jeffrey', 'O'), 'Hanson',
+                    role = c("ctb"),
+                    comment = c(ORCID = "0000-0002-4716-6134")))
 URL: https://github.com/ropensci/piggyback
 BugReports: https://github.com/ropensci/piggyback/issues
 License: GPL-3
