--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: piggyback
-Version: 0.0.10
+Version: 0.0.10.99
 Title: Managing Larger Data on a GitHub Repository
 Description: Because larger (> 50 MB) data files cannot easily be committed to git,
   a different approach is required to manage data associated with an analysis in a 
@@ -20,7 +20,10 @@ Authors@R: c(person("Carl", "Boettiger",
                      comment = c(ORCID = "0000-0003-2172-5265")),
              person(c('Jeffrey', 'O'), 'Hanson',
                     role = c("ctb"),
-                    comment = c(ORCID = "0000-0002-4716-6134")))
+                    comment = c(ORCID = "0000-0002-4716-6134")),
+             person("Kevin", 'Kuo',
+                    role = c("ctb"),
+                    comment = c(ORCID = "0000-0001-7803-7901")))
 URL: https://github.com/ropensci/piggyback
 BugReports: https://github.com/ropensci/piggyback/issues
 License: GPL-3
