replace git2r with gert

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,10 @@ importFrom(fs,dir_create)
 importFrom(fs,path_filter)
 importFrom(fs,path_join)
 importFrom(fs,path_rel)
+importFrom(gert,git_find)
+importFrom(gert,git_info)
+importFrom(gert,git_remote_list)
 importFrom(gh,gh)
-importFrom(git2r,discover_repository)
-importFrom(git2r,remote_url)
-importFrom(git2r,repository)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
