--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: piggyback
-Version: 0.0.13
+Version: 0.1.0
 Title: Managing Larger Data on a GitHub Repository
 Description: Because larger (> 50 MB) data files cannot easily be committed to git,
   a different approach is required to manage data associated with an analysis in a 
@@ -28,15 +28,12 @@ URL: https://github.com/ropensci/piggyback
 BugReports: https://github.com/ropensci/piggyback/issues
 License: GPL-3
 Encoding: UTF-8
-LazyData: true
 ByteCompile: true
 Imports:
     gh,
     httr,
     jsonlite,
-    gert,
     fs,
-    usethis,
     crayon,
     clisymbols,
     magrittr,
@@ -47,9 +44,11 @@ Suggests:
     readr,
     covr,
     testthat,
+    gert,
     datasets,
     knitr,
-    rmarkdown
+    rmarkdown,
+    usethis
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
