--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ importFrom(crayon,blue)
 importFrom(crayon,green)
 importFrom(fs,dir_create)
 importFrom(gh,gh)
+importFrom(gh,gh_token)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
