--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,10 @@ Authors@R: c(person("Carl", "Boettiger",
                     comment = c(ORCID = "0000-0002-4716-6134")),
              person("Kevin", 'Kuo',
                     role = c("ctb"),
-                    comment = c(ORCID = "0000-0001-7803-7901")))
+                    comment = c(ORCID = "0000-0001-7803-7901")),
+             person("Tan", "Ho",
+                    role = c("ctb"),
+                    comment = c(ORCID = "0000-0001-8388-5155")))
 URL: https://github.com/ropensci/piggyback
 BugReports: https://github.com/ropensci/piggyback/issues
 License: GPL-3
