--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(pb_download)
 export(pb_download_url)
 export(pb_list)
 export(pb_new_release)
+export(pb_releases)
 export(pb_upload)
 importFrom(clisymbols,symbol)
 importFrom(crayon,blue)
@@ -21,7 +22,3 @@ importFrom(httr,stop_for_status)
 importFrom(httr,upload_file)
 importFrom(httr,write_disk)
 importFrom(jsonlite,toJSON)
-importFrom(lubridate,as_datetime)
-importFrom(memoise,forget)
-importFrom(memoise,memoise)
-importFrom(memoise,timeout)
