--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,9 @@ Authors@R: c(person("Carl", "Boettiger",
                     email = "cboettig@gmail.com", 
                     role = c("aut", "cre", "cph"),
                     comment = c(ORCID = "0000-0002-1642-628X")),
+             person("Tan", "Ho",
+                    role = c("aut"),
+                    comment = c(ORCID = "0000-0001-8388-5155")),
              person("Mark", "Padgham", 
                      role = c("ctb"),
                      comment = c(ORCID = "0000-0003-2172-5265")),
@@ -23,10 +26,8 @@ Authors@R: c(person("Carl", "Boettiger",
                     comment = c(ORCID = "0000-0002-4716-6134")),
              person("Kevin", 'Kuo',
                     role = c("ctb"),
-                    comment = c(ORCID = "0000-0001-7803-7901")),
-             person("Tan", "Ho",
-                    role = c("ctb"),
-                    comment = c(ORCID = "0000-0001-8388-5155")))
+                    comment = c(ORCID = "0000-0001-7803-7901"))
+                    )
 URL: https://github.com/ropensci/piggyback
 BugReports: https://github.com/ropensci/piggyback/issues
 License: GPL-3
