`pb_release_delete()` introduced to delete existing releases. [Resolves #81]

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,7 @@ export(pb_download)
 export(pb_download_url)
 export(pb_list)
 export(pb_new_release)
+export(pb_release_create)
+export(pb_release_delete)
 export(pb_releases)
 export(pb_upload)
