revamp testing for download/info
split test_without_auth into test-download + test-info files

fix ci usethis testing

try using gert instead of usethis, to maybe elim need for usethis

minimize non-token calls

use latest rcmd-check-full.yaml from rlib/actions

archive old tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,9 +47,9 @@ Suggests:
     readr,
     covr,
     testthat,
-    datasets,
     knitr,
     rmarkdown,
+    gert,
     usethis,
     magrittr
 VignetteBuilder: knitr
