rewrite testing with auth
rewrite testing with authentication

update description to no longer need usethis but instead suggest withr (which already is used by testthat)

inst files for uploading

cleanup root level

rm rlang for now

update tests to use tan_gh_token

use tanfork of piggyback as test loc

cleanups

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,9 +30,7 @@ jobs:
           - {os: ubuntu-latest,   r: 'oldrel-1'}
     env:
       RSPM: ${{ matrix.config.rspm }}
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      IS_GHA: 'true'
+      TAN_GH_TOKEN: ${{ secrets.TAN_GH_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
 
     steps:
