work on testing
add private download test

update tests to use github default token more explicitly

check upload files locaiton?

move inst into tests?

fixup private download

maybe fix with rbuildignore removal?

move files back, sigh

getting closer...

abandon testing for private repos for now?

continue messing with

change delete test to check for status code

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -48,7 +48,11 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
+        env:
+          piggyback_cache_duration: 0
 
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
+          check-dir: '"check"'
+
