add pb_read/pb_write and tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,9 +43,8 @@ Imports:
     memoise,
     rlang
 Suggests:
+    arrow,
     spelling,
-    duckdbfs,
-    duckdb,
     readr,
     covr,
     testthat,
