--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(pb_download)
 export(pb_download_url)
 export(pb_list)
 export(pb_new_release)
+export(pb_read)
 export(pb_release_create)
 export(pb_release_delete)
 export(pb_releases)
 export(pb_upload)
+export(pb_write)
