--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: piggyback
-Version: 0.1.5.9002
+Version: 0.1.5.9003
 Title: Managing Larger Data on a GitHub Repository
 Description: Because larger (> 50 MB) data files cannot easily be committed to git,
   a different approach is required to manage data associated with an analysis in a 
@@ -40,7 +40,8 @@ Imports:
     httr,
     jsonlite,
     fs,
-    memoise
+    memoise,
+    rlang
 Suggests:
     spelling,
     readr,
