--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Authors@R: c(person("Carl", "Boettiger",
                     role = c("ctb"),
                     comment = c(ORCID = "0000-0001-7803-7901"))
                     )
-URL: https://github.com/ropensci/piggyback
+URL: https://docs.ropensci.org/piggyback/, https://github.com/ropensci/piggyback
 BugReports: https://github.com/ropensci/piggyback/issues
 License: GPL-3
 Encoding: UTF-8
