--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -34,7 +34,7 @@ jobs:
       R_KEEP_PKG_SOURCE: yes
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-pandoc@v2
 
@@ -55,4 +55,7 @@ jobs:
         with:
           upload-snapshots: true
           check-dir: '"check"'
+        env:       
+          TAN_GH_TOKEN: ${{ secrets.TAN_GH_TOKEN }}
+          GITHUB_PAT: ${{ secrets.TAN_GH_TOKEN }}
 
