--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -25,13 +25,14 @@ jobs:
         config:
           - {os: macOS-latest,   r: 'release'}
           - {os: windows-latest, r: 'release'}
-          - {os: ubuntu-22.04,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-22.04,   r: 'release'}
-          - {os: ubuntu-20.04,   r: 'oldrel-1'}
+          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+          - {os: ubuntu-latest,   r: 'release'}
+          - {os: ubuntu-22.04,   r: 'oldrel-1'}
     env:
       TAN_GH_TOKEN: ${{ secrets.TAN_GH_TOKEN }}
       GITHUB_PAT: ${{ secrets.TAN_GH_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
+      PIGGYBACK_USE_AUTH_TESTS: true
 
     steps:
       - uses: actions/checkout@v4
