--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -16,6 +16,7 @@ jobs:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       TAN_GH_TOKEN: ${{ secrets.TAN_GH_TOKEN }}
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      PIGGYBACK_USE_AUTH_TESTS: true
 
     steps:
       - uses: actions/checkout@v2
